# ImageProcessor

./: CMakeLists.txt
image_processor/: CMakeLists.txt  bmp.cpp  bmp.h  exceptions.h  image.cpp  image.h  image_processor.cpp  parser.cpp  parser.h  processor.cpp  processor.h  producers.cpp  producers.h  test_parser.cpp  test_processor.cpp
image_processor/filters/: base.cpp  base.h  crop.cpp  crop.h  crystallize.cpp  crystallize.h  edge_detection.cpp  edge_detection.h  gaussian_blur.cpp  gaussian_blur.h  gray_scale.cpp  gray_scale.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h
